--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,36 @@
 @charset "utf-8";
 /* CSS Doc */
 
-h2 {
-    color: crimson;
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+/* Add a black bacgound color to the top navigation */
+.menu {
+    background-color: #333;
+    overflow: hidden;
+}
+
+/* Style the links inside the navigation */
+.menu a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.menu a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add a color to the active/current link */
+.menu a.active {
+    background-color: #04AA6D;
+    color: white;
 }
