--- a/styles/style.css
+++ b/styles/style.css
@@ -23,40 +23,40 @@ body {
 }
 
 /* Change the color of links on hover */
-.menu a:hover {
+.topnav a:hover {
     background-color: #ddd;
     color: black;
 }
 
 /* Add a color to the active/current link */
-.menu a.active {
+.topnav a.active {
     background-color: #04AA6D;
     color: white;
 }
 
 @media screen and (max-width: 600px) {
-    .menu a:not(:first-child) {
+    .topnav a:not(:first-child) {
         display: none;
     }
 
-    .menu a.icon {
+    .topnav a.icon {
         float: right;
         display: block;
     }
 }
 
 @media screen and (max-width: 600px) {
-    .menu.responsive {
+    .topnav.responsive {
         position: relative;
     }
 
-    .menu.responsive .icon {
+    .topnav.responsive .icon {
         position: absolute;
         right: 0;
         top: 0;
     }
 
-    .menu.responsive a {
+    .topnav.responsive a {
         float: none;
         display: block;
         text-align: left;
